--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-fastapi==0.111.0
-fastapi-cli==0.0.3
 pillow==10.3.0
-protobuf==4.25.3
 pyarrow==16.0.0
 pydantic==2.7.1
 pydantic_core==2.18.2
 streamlit==1.34.0
-uvicorn==0.29.0
+boto3==1.26.100
+Pillow==9.4.0
