--- a/lib/gcp/gcp.env
+++ b/lib/gcp/gcp.env
@@ -1,4 +1,6 @@
 # GCS PROJECT
 GCP_PROJECT_ID='langchaindata'
-SOURCE_BUCKET = 'gs://aurora-humans/'
-DESTINATION_BLOB='aurora_photo'
+STORAGE_BUCKET = 'gs://aurora-humans/'
+DESTINATION_BLOB='aurora_photos'
+GOOGLE_APPLICATION_CREDENTIALS='../auth/langchaindata-20c6e8a238ae.json'
+SECRET_NAME='GOOGLE_APPLICATION_CREDENTIALS'
