--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,19 @@
-ExifRead==3.0.0
 fastapi==0.111.0
 fastapi-cli==0.0.3
+google-api-core==2.19.0
+google-auth==2.29.0
+google-cloud==0.34.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.16.0
+google-crc32c==1.5.0
+google-resumable-media==2.7.0
+googleapis-common-protos==1.63.0
+httptools==0.6.1
 httpx==0.27.0
-pandas==2.2.2
-pillow==10.3.0
-protobuf==4.25.3
-pyarrow==16.0.0
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydeck==0.9.1
-Pygments==2.18.0
-pymongo==3.11.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2024.1
-PyYAML==6.0.1
-referencing==0.35.1
-requests==2.31.0
-rich==13.7.1
-rpds-py==0.18.1
-s3transfer==0.10.1
-shellingham==1.5.4
-six==1.16.0
-smmap==5.0.1
-sniffio==1.3.1
-starlette==0.37.2
+infisical-python==2.1.9
 streamlit==1.34.0
-tenacity==8.3.0
-toml==0.10.2
-toolz==0.12.1
-tornado==6.4
-typer==0.12.3
 typing==3.7.4.3
 typing_extensions==4.11.0
-tzdata==2024.1
-ujson==5.9.0
 urllib3==2.2.1
 uvicorn==0.29.0
-uvloop==0.19.0
-watchfiles==0.21.0
-websockets==12.0
+
