Docker works + Pulumi Deployed

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 
 #GCP CREDENTIALS
 GCP_PROJECT_ID="langchaindata"
-SOURCE_BUCKET=""
-DESTINATION_BUCKET=""
+SOURCE_BUCKET="gs://aurora-humans/"
+DESTINATION_BUCKET="gs://aurora-humans/"
 GOOGLE_APPLICATION_CREDENTIALS=
 
 #INFISCAL
