--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ __pycache__/
 *.env
 /lib/gcp/auth/langchaindata-20c6e8a238ae.json
 lib/gcp/auth/langchaindata-20c6e8a238ae.json
+lib/gcp/auth/langchaindata-20c6e8a238ae.json:1
