--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ google-cloud-storage==2.16.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
+grpcio==1.62.2
 httptools==0.6.1
 httpx==0.27.0
 infisical-python==2.1.9
