--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,23 @@
-fastapi==0.111.0
-fastapi-cli==0.0.3
+dnspython==2.6.1
 google-api-core==2.19.0
 google-auth==2.29.0
 google-cloud==0.34.0
 google-cloud-core==2.4.1
+google-cloud-secret-manager==2.20.0
 google-cloud-storage==2.16.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
-grpcio==1.62.2
-httptools==0.6.1
-httpx==0.27.0
-infisical-python==2.1.9
+grpc-google-iam-v1==0.13.0
+grpcio==1.60.1
+grpcio-status==1.60.1
+h11==0.14.0
+pulumi>=3.0.0,<4.0.0
+pulumi-gcp>=7.0.0,<8.0.0
+pulumi-github==6.2.0
+grpcio==1.60.1
+grpcio-status==1.60.1
+python-dotenv==1.0.1
+requests==2.31.0
 streamlit==1.34.0
-typing==3.7.4.3
-typing_extensions==4.11.0
-urllib3==2.2.1
 uvicorn==0.29.0
-
