--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ pulumi-github==6.2.0
 grpcio==1.60.1
 grpcio-status==1.60.1
 python-dotenv==1.0.1
+pytest==8.2.0
 requests==2.31.0
 streamlit==1.34.0
 uvicorn==0.29.0
