--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
       - checkout 
       - python/install-packages:
           pkg-manager: pip
-          app-dir: ~/app/  # If your requirements.txt isn't in the root directory.
+          #app-dir: ~/app/  # If your requirements.txt isn't in the root directory.
           pip-dependency-file: requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - run:
           name: Run tests
