--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ __pycache__/
 /lib/gcp/auth/langchaindata-20c6e8a238ae.json
 lib/gcp/auth/langchaindata-20c6e8a238ae.json
 lib/gcp/auth/langchaindata-20c6e8a238ae.json:1
+*.bak
+
