--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 executors:
   python-executor:
     docker:
-      - image: circleci/python
+      - image: cimg/python:3.12.3
     working_directory: ./aurora-humans-app/
     environment:
       DOCKER_USERNAME: $DOCKER_USERNAME # Reference environment variables set in CircleCI project settings
