--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,15 @@ version: 2.1
 
 executors:
   python-executor:
-    docker:
-      - image: cimg/python:3.12.3
-    working_directory: ./aurora-humans-app/
     environment:
       DOCKER_USERNAME: $DOCKER_USERNAME # Reference environment variables set in CircleCI project settings
-      DOCKER_PASSWORD: $DOCKER_PASSWORD
+      DOCKER_ACCCESS_TOKEN: $DOCKER_PASSWORD
+    docker:
+      - image: cimg/python:3.12.3
+        auth:
+          username: $DOCKER_USERNAME
+          password: $DOCKER_ACCCESS_TOKEN
+    working_directory: ./aurora-humans-app/
 
 jobs:
   setup:
