--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ executors:
       - image: cimg/python:3.12.3
         auth:
           username: $DOCKER_USERNAME
-          password: DOCKER_ACCESS_TOKEN
+          password: $DOCKER_ACCESS_TOKEN
     working_directory: ~/app/
 
 jobs:
