--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,34 +3,17 @@ version: 2.1
 orbs:
   docker: circleci/docker@2.6.0
 
-jobs:
-  build_docker:
-    environment:
-      DOCKER_USERNAME: $DOCKER_ACCESS_TOKENDOCKER_USERNAME
-      DOCKER_ACCESS_TOKEN: $DOCKER_ACCESS_TOKEN
-    docker:
-      - image: cimg/python:3.12.3
-      - auth:
-          username: DOCKER_USERNAME
-          password: DOCKER_ACCESS_TOKEN2S
-    steps:
-      -  run:
-          name: Build Docker Image
-          command: docker pull cimg/python:3.12.3
-
-
 executors:
   python-executor:
-    environment:
-      DOCKER_USERNAME: $DOCKER_ACCESS_TOKENDOCKER_USERNAME
-      DOCKER_ACCESS_TOKEN: $DOCKER_ACCESS_TOKEN
     docker:
       - image: cimg/python:3.12.3
         auth:
           username: $DOCKER_USERNAME
           password: $DOCKER_ACCESS_TOKEN
     working_directory: ~/app/
-setup:
+
+jobs:
+  setup:
     executor: python-executor
     steps:
       - checkout
@@ -49,32 +32,27 @@ setup:
             gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
             gcloud config set project your-gcp-project-id
 
+  build:
+    executor: python-executor
+    steps:
+      - setup_remote_docker:
+          version: 20.10.7
+      - checkout
+      - run:
+          name: Docker Login
+          command: echo "$DOCKER_ACCESS_TOKEN" | docker login --username "$DOCKER_USERNAME" --password-stdin
+      - run:
+          name: Install Dependencies
+          command: |
+            python -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+      - run:
+          name: Build and Push Docker Image
+          command: |
+            docker build -t $DOCKER_USERNAME/aurora-humans-app:latest .
+            docker push $DOCKER_USERNAME/aurora-humans-app:latest
 
-build:
-  executor: python-executor
-  steps:
-    - setup_remote_docker:
-        version: 20.10.7
-    - checkout
-    - run:
-        name: Docker Login
-        command: docker login -u $DOCKER_USERNAME -p $DOCKER_ACCESS_TOKEN
-    - run:
-        name: Install Dependencies
-        command: |
-          python -m venv venv
-          . venv/bin/activate
-          pip install -r requirements.txt
-    - run:
-        name: Build Docker Image
-        command: docker buildx build -t aurora-humans-app .
-    - run:
-        name: Push Docker Image
-        command: |
-          docker tag my-image $DOCKER_USERNAME/aurora-humans-app:latest
-          docker push $DOCKER_USERNAME/aurora-humans-app:latest
-
-  
   pulumi-preview:
     executor: python-executor
     steps:
@@ -110,21 +88,16 @@ build:
           command: pulumi up --yes
 
 workflows:
+  version: 2
   build_and_deploy:
     jobs:
-      - machine-job:
-          context:
-            - build-env-vars
-            - docker-hub-creds
+      - setup
       - build:
           requires:
-            - machine-job
-      - setup:
-          requires:
-            - build
+            - setup
       - pulumi-preview:
           requires:
-            - setup
+            - build
       - pulumi-deploy:
           requires:
             - pulumi-preview
