--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ orbs:
   docker: circleci/docker@2.6.0
 
 executors:
+  environment:
+    - $GCLOUD_SERVICE_KEY: $GCLOUD_SERVICE_KEY
   python-executor:
     docker:
       - image: cimg/python:3.12.3
