--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,8 @@ jobs:
         - run:
             name: Authenticate with GCP
             command: |
-              echo $GCLOUD_SERVICE_KEY | base64 --decode > ${HOME}/gcloud-service-key.json
-              gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+              echo $GCLOUD_SERVICE_KEY | base64 --decode > ./gcloud-service-key.json
+              gcloud auth activate-service-account --key-file=./gcloud-service-key.json
               gcloud config set project $GCP_PROJECT_ID
 
   pulumi-preview:
