--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,14 +50,14 @@ jobs:
               echo "deb https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
               curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
               sudo apt-get update && sudo apt-get install -y google-cloud-sdk
-        - run:
-            name: Authenticate with GCP
-            command: |
-              echo $GCLOUD_SERVICE_KEY | base64 --decode > ./tmp/file.txt \
-              gcloud auth activate-service-account --key-file=./tmp/file.txt
-              gcloud config set project langchaindata
-              rm -rf ./tmp
-
+              - run:
+                name: Authenticate with GCP
+                command: |
+                  mkdir -p ./tmp  # Ensure the directory exists
+                  echo $GCLOUD_SERVICE_KEY | base64 --decode > ./tmp/file.txt
+                  gcloud auth activate-service-account --key-file=./tmp/file.txt
+                  gcloud config set project langchaindata
+                  rm -rf ./tmp
   pulumi-preview:
     executor: python-executor
     steps:
