--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,26 +38,19 @@ jobs:
             docker build -t $DOCKER_USERNAME/aurora-humans-app:latest .
             docker push $DOCKER_USERNAME/aurora-humans-app:latest
 
-  setup:
+  gcloud-auth:
       executor: python-executor
       steps:
         - checkout
         - run:
             name: Install Google Cloud SDK
             command: |
-              sudo apt-get install -y google-cloud-sdk
-              sudo apt-get update
-              sudo apt-get install -y apt-transport-https ca-certificates gnupg
-              echo "deb https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-              curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key
-                - run:
-                  name: Authenticate with GCP
-                  command: |
-                    mkdir -p ./tmp  # Ensure the directory exists
-                    echo $GCLOUD_SERVICE_KEY | base64 --decode > ./tmp/file.txt
-                    gcloud auth activate-service-account --key-file=./tmp/file.txt
-                    gcloud config set project langchaindata
-                    rm -rf ./tmp/
+              pip install -u -q google-cloud secret-manager google-cloud-storage
+              mkdir -p ./tmp  # Ensure the directory exists
+              echo $GCLOUD_SERVICE_KEY | base64 --decode > ./tmp/file.txt
+              gcloud auth activate-service-account --key-file=./tmp/file.txt
+              gcloud config set project langchaindata
+              rm -rf ./tmp/
   pulumi-preview:
     executor: python-executor
     steps:
