--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
             command: |
               pip install -q google-cloud secret-manager google-cloud-storage
               mkdir -p ./tmp && \
-              echo $GCLOUD_SERVICE_KEY | base64 --decode > ./tmp/file.txt || { echo "Failed to decode and write the service key"; exit 1; }
+              echo GCLOUD_SERVICE_KEY | base64 --decode > ./tmp/file.txt || { echo "Failed to decode and write the service key"; exit 1; }
               gcloud auth activate-service-account --key-file=./tmp/file.txt
               gcloud config set project langchaindata
               rm -rf ./tmp/
