--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
         
               # Decode service key from environment variable
               echo "Decoding service key..."
-              echo $GCLOUD_SERVICE_KEY | base64 --decode > "./langchaindata-0d3cae3a3eed.json" || { echo "Failed to decode and write the service key"; exit 1; }
+              echo $GCLOUD_SERVICE_KEY | base64 --decode > "./tmp/GCPLoudServiceKey.json" || { echo "Failed to decode and write the service key"; exit 1; }
         
               # Authenticate to Google Cloud with the decoded service key
               echo "Authenticating to Google Cloud..."
@@ -64,6 +64,7 @@ jobs:
               gcloud config set project langchaindata
               echo "Cleaning up temporary files..."
               rm -rf ./tmp/
+              RUN apt-get update && apt-get install -y curl unzip
               working_directory: ./gcp-pulimi      
   pulumi-preview:
     executor: python-executor
@@ -71,7 +72,7 @@ jobs:
       - checkout
       - run:
           name: Install Pulumi
-          command: curl -fsSL https://get.pulumi.com | sh
+          command: curl -fsSL https://get.pulumi.com | sh &&
       - run:
           name: Install dependencies
           command: pip install -r requirements.txt
