--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,7 +76,7 @@ jobs:
           command: curl -fsSL https://get.pulumi.com | sh
       - run:
           name: Install dependencies
-          command: pip install -r requirements.txt && ENV PATH="/usr/local/pulumi:${PATH}"
+          command: pip install -r requirements.txt
       - run:
           name: Pulumi stack select
           command: pulumi stack select dev
