--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
               rm -rf ./tmp/
               RUN apt-get update && apt-get install -y curl unzip
               
-              working_directory: ./gcp-pulimi     
+              working_directory: ./gcp-pulimi/     
   pulumi-preview:
     executor: python-executor
     steps:
