--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,29 @@
 dnspython==2.6.1
+fastapi==0.111.0
 google-api-core==2.19.0
-google-auth==2.29.0
+google-api-python-client==2.136.0
+google-auth==2.31.0
+google-auth-httplib2==0.2.0
 google-cloud==0.34.0
 google-cloud-core==2.4.1
 google-cloud-secret-manager==2.20.0
-google-cloud-storage==2.16.0
+google-cloud-storage==2.17.0
 google-crc32c==1.5.0
 google-resumable-media==2.7.0
 googleapis-common-protos==1.63.0
 grpc-google-iam-v1==0.13.0
 grpcio==1.60.1
-grpcio-status==1.60.1
-h11==0.14.0
-exifread==3.0.0
-pulumi>=3.0.0,<4.0.0
-pulumi-gcp>=7.0.0,<8.0.0
-pulumi-github==6.2.0
-python-dotenv==1.0.1
+gunicorn==22.0.0
+pillow==10.3.0
+pulumi==3.116.1
+pulumi_gcp==7.23.0
+pulumi_github==6.2.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+pymongo==3.11.0
 pytest==8.2.0
-requests==2.31.0
+python-dotenv==1.0.1
 streamlit==1.34.0
+typing==3.7.4.3
+typing_extensions==4.11.0
+uvicorn==0.29.0
