--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 *.pyc
 venv/
 .venv/
@@ -7,11 +6,13 @@ __pycache__/
 .arc/
 .env
 *.env
-/lib/gcp/auth/langchaindata-20c6e8a238ae.json
-lib/gcp/auth/langchaindata-20c6e8a238ae.json
-lib/gcp/auth/langchaindata-20c6e8a238ae.json:1
+lib/gcp/auth/langchaindata-bcc71fad6f2a.json
+./langchaindata-bcc71fad6f2a.json
+langchaindata-bcc71fad6f2a.json
 *.bak
 *.json
+.gitignore
+
 
 
 
