--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
   # Step 1: Set up the environment
-  - name: 'gcr.io/cloud-builders/gcloud'
+  - name: 'gcr.io/cloud-builders/gcloud/docker'
     entrypoint: 'bash'
     args:
       - '-c'
@@ -8,13 +8,19 @@ steps:
         echo "Setting up environment variables"
         gcloud config set project $PROJECT_ID
         gcloud auth configure-docker
+    
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/connected-hearts']
 
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['run', 'deploy', 'connected-hearts', '--image', 'gcr.io/$PROJECT_ID/my-streamlit-app', '--platform', 'managed', '--region', 'australia-southeast2', '--allow-unauthenticated']
+  
   # Step 2: Build the Docker image
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
       - '-t'
-      - 'gcr.io/$PROJECT_ID/aurora-humans-container:latest'
+      - 'gcr.io/$PROJECT_ID/connected-hearts:latest'
       - '.'
 
   # Step 3: Push the Docker image to Container Registry
@@ -60,11 +66,6 @@ steps:
       - '--api-config'
       - 'my-config'
       - '--location'
-      - 'asia'
-
-substitutions:
-  _REGION: asia
-  _SERVICE_NAME: aurora-humans-app
-
+      - 'australia-southeast2''
 images:
-  - 'gcr.io/$PROJECT_ID/aurora-humans-container:latest'
+- 'gcr.io/$PROJECT_ID/connected-hearts:latest'
